# python-cli-pkg-proj-setup

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.circleci/: config.yml
src/: _version.py
src/python_cli_setup/: __init__.py  _version.py  cli.py  temp
tests/: test_cli.py
